--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
     html, body {
       margin: 0; padding: 0; overflow: hidden; width: 100%; height: 100%; background: #000;
     }
-    #ar-container { width: 100vw; height: 100vh; position: relative; z-index: 0; }
+    #ar-container {
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      z-index: 0;
+    }
     #overlay {
       position: absolute; z-index: 2; color: white;
       background: rgba(0,0,0,0.5); padding: 8px;
       font-family: sans-serif; bottom: 10px; left: 10px; font-size: 14px;
+    }
+    #start-video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 16px 24px;
+      font-size: 16px;
+      background: #000;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      z-index: 5;
+      display: none;
     }
   </style>
 </head>
@@ -21,10 +40,11 @@
   <div id="ar-container"></div>
   <div id="overlay">📷 Apunta a la imagen target para iniciar</div>
 
-  <!-- ✅ Primero MindAR -->
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
-  <!-- ✅ Después tu código -->
-  <script type="module" src="/src/main.js"></script>
+  <!-- ✅ Botón antes del script -->
   <button id="start-video">▶️ Iniciar video</button>
+
+  <!-- ✅ Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
+  <script type="module" src="/src/main.js"></script>
 </body>
 </html>
