--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       border: 2px solid white;
       border-radius: 8px;
       z-index: 10;
-      /*display: none;*/
+      display: none;
     }
   </style>
 </head>
