--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       font-family: sans-serif; bottom: 10px; left: 10px; font-size: 14px;
     }
     #start-video {
-      position: absolute;
-      bottom: 30px;
+      position: fixed;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
       padding: 16px 24px;
@@ -31,9 +31,10 @@
       color: #fff;
       border: 2px solid white;
       border-radius: 8px;
-      z-index: 10;
+      z-index: 9999;
       display: none;
     }
+
   </style>
 </head>
 <body>
