--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>AR Tablet Interactiva</title>
-  <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
-      margin: 0; padding: 0; overflow: hidden; width: 100%; height: 100%; background: #000;
+      margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000;
     }
     #ar-container {
       width: 100vw;
@@ -26,26 +25,21 @@
       color: #fff;
       border: 2px solid white;
       border-radius: 8px;
-      z-index: 9999;
+      z-index: 999;
       display: none;
     }
-    video {
+    #hidden-video {
       display: none;
     }
   </style>
 </head>
 <body>
   <div id="ar-container"></div>
-
-  <!-- Botón para iniciar video -->
   <button id="start-video">▶️ Iniciar video</button>
-
-  <!-- Video precargado (iOS workaround) -->
   <video id="hidden-video" muted playsinline preload="auto">
     <source src="./assets/videomotor.mp4" type="video/mp4">
   </video>
 
-  <!-- MindAR -->
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
