--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
-      margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000;
+      margin: 0; padding: 0; width: 100%; height: 100%; background: #000; overflow: hidden;
     }
     #ar-container {
       width: 100vw;
