--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>AR Tablet Interactiva</title>
+  <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
-      margin: 0; padding: 0; width: 100%; height: 100%; background: #000; overflow: hidden;
+      margin: 0; padding: 0; overflow: hidden; width: 100%; height: 100%; background: #000;
     }
     #ar-container {
       width: 100vw;
@@ -25,10 +26,7 @@
       color: #fff;
       border: 2px solid white;
       border-radius: 8px;
-      z-index: 999;
-      display: none;
-    }
-    #hidden-video {
+      z-index: 9999;
       display: none;
     }
   </style>
@@ -36,7 +34,7 @@
 <body>
   <div id="ar-container"></div>
   <button id="start-video">▶️ Iniciar video</button>
-  <video id="hidden-video" muted playsinline preload="auto">
+  <video id="hidden-video" muted playsinline preload="auto" style="display: none">
     <source src="./assets/videomotor.mp4" type="video/mp4">
   </video>
 
