--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       position: relative;
       z-index: 0;
     }
+    #overlay {
+      position: absolute; z-index: 2; color: white;
+      background: rgba(0,0,0,0.5); padding: 8px;
+      font-family: sans-serif; bottom: 10px; left: 10px; font-size: 14px;
+    }
     #start-video {
       position: fixed;
       bottom: 20px;
@@ -29,16 +34,14 @@
       z-index: 9999;
       display: none;
     }
+
   </style>
 </head>
 <body>
   <div id="ar-container"></div>
   <button id="start-video">▶️ Iniciar video</button>
-  <video id="hidden-video" muted playsinline preload="auto" style="display: none">
-    <source src="./assets/videomotor.mp4" type="video/mp4">
-  </video>
 
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
-</html>
+</html> 
