--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>AR Tablet Interactiva</title>
+  <link rel="icon" href="data:,">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
@@ -31,38 +32,58 @@
       display: none;
     }
 
-    #scan-overlay {
+    .mindar-ui-overlay {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       z-index: 9998;
-      background: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      border-radius: 16px;
+      pointer-events: none;
+    }
+
+    .mindar-ui-overlay .scanning {
+      width: 150px;
+      height: 150px;
+      border: 3px solid white;
+      border-radius: 8px;
+      animation: pulse 2s infinite;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
-    #scan-overlay img {
-      width: 180px;
-      animation: pulse 2s infinite;
+    .mindar-ui-overlay .scanning .inner {
+      width: 60%;
+      height: 10%;
+      background: white;
+      animation: updown 1s infinite;
     }
 
     @keyframes pulse {
-      0% { opacity: 0.6; }
+      0% { opacity: 0.4; }
       50% { opacity: 1; }
-      100% { opacity: 0.6; }
+      100% { opacity: 0.4; }
+    }
+
+    @keyframes updown {
+      0% { transform: translateY(-20px); }
+      50% { transform: translateY(20px); }
+      100% { transform: translateY(-20px); }
     }
   </style>
 </head>
 <body>
   <div id="ar-container"></div>
-  <button id="start-video">▶️ Iniciar video</button>
-  <div id="scan-overlay">
-    <img src="./assets/scanning.gif" alt="Escaneando..." />
+
+  <!-- Overlay escaneo -->
+  <div class="mindar-ui-overlay" id="scan-overlay">
+    <div class="scanning">
+      <div class="inner"></div>
+    </div>
   </div>
+
+  <button id="start-video">▶️ Iniciar video</button>
 
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
   <script type="module" src="/src/main.js"></script>
