--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     .mindar-ui-overlay {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      display: flex;
+      display: none; /* ✅ Esto lo oculta inicialmente */
       align-items: center;
       justify-content: center;
       z-index: 9998;
       pointer-events: none;
     }
+
 
     .mindar-ui-overlay .scanning {
       width: 150px;
