--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       border: 3px solid white;
       border-radius: 8px;
       animation: pulse 2s infinite;
-      display: none;
+      display: flex;
       align-items: center;
       justify-content: center;
     }
