--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   overflow-y: auto;
 }
 
@@ -144,6 +144,7 @@
     @media (max-width: 480px) {
       #logo {
         width: 220px;
+        margin-top: 100px;
         margin-bottom: 20px;
       }
       .moto-grid {
@@ -202,5 +203,10 @@
 
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
   <script type="module" src="/src/main.js"></script>
+  <script>
+    window.addEventListener("load", () => {
+      window.scrollTo(0, 0);
+    });
+  </script>
 </body>
 </html>
