--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
   <link rel="icon" href="data:,">
   <style>
     html, body {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
-  font-family: sans-serif;
-  overflow: hidden;
-  background: #000; /* Negro por defecto (solo se verá en caso de error) */
-}
+      margin: 0;
+      padding: 0;
+      width: 100vw;
+      height: 100vh;
+      font-family: sans-serif;
+      overflow: hidden;
+      background: #000;
+    }
 
-#landing {
-  background: url('./assets/fondo.png') no-repeat center center fixed;
-  background-size: cover;
-  position: absolute;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  overflow-y: auto;
-}
+    #landing {
+      background: url('./assets/fondo.png') no-repeat center center fixed;
+      background-size: cover;
+      position: absolute;
+      z-index: 10;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      overflow-y: auto;
+    }
 
     #logo {
       width: 300px;
       max-width: 90%;
-      margin-top: 30px;
+      margin-top: 50px;
       margin-bottom: 40px;
     }
 
@@ -66,102 +66,115 @@
     }
 
     #ar-container {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1;
-}
+      position: absolute;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 1;
+    }
 
-    #start-video, #back-button {
+    #back-button {
       position: fixed;
-      z-index: 9999;
-      padding: 10px 16px;
-      font-size: 16px;
+      top: 15px;
+      left: 15px;
+      font-size: 14px;
+      padding: 10px 14px;
       border: 2px solid white;
       background: rgba(0, 0, 0, 0.6);
       color: white;
       border-radius: 8px;
       cursor: pointer;
+      z-index: 9999;
+      display: none;
+    }
+
+    #moto-ui-wrapper {
+      position: fixed;
+      top: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 9999;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+      pointer-events: none;
+    }
+
+    #moto-label {
+      max-width: 200px;
+      display: none;
+      pointer-events: none;
     }
 
     #start-video {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  display: none;
-  padding: 10px 16px;
-  font-size: 16px;
-  border: 2px solid white;
-  background: rgba(0, 0, 0, 0.6);
-  color: white;
-  border-radius: 8px;
-  cursor: pointer;
-  z-index: 9999;
-  bottom: env(safe-area-inset-bottom, 15px); /* respeta notch o barra inferior */
-}
-
-    #back-button {
-  top: 15px;
-  left: 15px;
-  display: none;
-  font-size: 14px; /* ANTES: 16px */
-  padding: 10px 14px; /* ANTES: 10px 16px */
-}
+      padding: 8px 14px;
+      font-size: 16px;
+      border: 2px solid white;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+      display: none;
+      pointer-events: auto;
+    }
 
     .mindar-ui-overlay {
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 9998;
-    pointer-events: none;
-  }
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9998;
+      pointer-events: none;
+    }
 
-  .mindar-ui-overlay .scanning {
-  width: 150px;
-  height: 150px;
-  border: 3px solid white;
-  border-radius: 8px;
-  animation: pulse 2s infinite;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(0, 0, 0, 0.3);
-}
+    .mindar-ui-overlay .scanning {
+      width: 150px;
+      height: 150px;
+      border: 3px solid white;
+      border-radius: 8px;
+      animation: pulse 2s infinite;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0, 0, 0, 0.3);
+    }
 
-.mindar-ui-overlay .scanning .inner {
-  width: 60%;
-  height: 10%;
-  background: white;
-  animation: updown 1s infinite;
-}
+    .mindar-ui-overlay .scanning .inner {
+      width: 60%;
+      height: 10%;
+      background: white;
+      animation: updown 1s infinite;
+    }
 
-@keyframes pulse {
-  0% { opacity: 0.4; }
-  50% { opacity: 1; }
-  100% { opacity: 0.4; }
-}
+    @keyframes pulse {
+      0% { opacity: 0.4; }
+      50% { opacity: 1; }
+      100% { opacity: 0.4; }
+    }
 
-@keyframes updown {
-  0% { transform: translateY(-20px); }
-  50% { transform: translateY(20px); }
-  100% { transform: translateY(-20px); }
-}
+    @keyframes updown {
+      0% { transform: translateY(-20px); }
+      50% { transform: translateY(20px); }
+      100% { transform: translateY(-20px); }
+    }
 
     @media (max-width: 480px) {
       #logo {
         width: 220px;
-        margin-top: 50px;
+        margin-top: 60px;
         margin-bottom: 20px;
       }
       .moto-grid {
         gap: 16px;
       }
       #back-button {
-      font-size: 12px;
-      padding: 6px 10px;
+        font-size: 12px;
+        padding: 6px 10px;
+      }
+      #moto-label {
+        max-width: 160px;
       }
     }
   </style>
@@ -191,24 +204,21 @@
 
   <div id="ar-container"></div>
 
-  <button id="start-video">▶️ Iniciar video</button>
+  <!-- Botón de volver -->
   <button id="back-button">← Volver</button>
 
+  <!-- Wrapper que contiene imagen de la moto + botón iniciar video -->
+  <div id="moto-ui-wrapper">
+    <img id="moto-label" src="" alt="Moto actual" />
+    <button id="start-video">▶️ Iniciar video</button>
+  </div>
+
+  <!-- Overlay de escaneo -->
   <div class="mindar-ui-overlay" id="scan-overlay" style="display: none;">
     <div class="scanning">
       <div class="inner"></div>
     </div>
   </div>
-
-  <img id="moto-label" src="" alt="Moto actual" style="
-  position: fixed;
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  max-width: 200px;
-  z-index: 9999;
-  display: none;"/>
-
 
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-three.prod.js"></script>
   <script type="module" src="/src/main.js"></script>
