--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>MOTOS TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+
   <link rel="icon" href="data:,">
   <style>
     html, body {
@@ -86,8 +87,8 @@
     }
 
     #start-video {
-  position: absolute; /* CAMBIADO de fixed a absolute */
-  top: 80px; /* Justo debajo del label */
+  position: fixed;
+  bottom: env(safe-area-inset-bottom, 20px); /* MÁS INTELIGENTE */
   left: 50%;
   transform: translateX(-50%);
   display: none;
@@ -100,6 +101,7 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
 
 
     #back-button {
