--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>MOTOS TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="data:,">
   <style>
     html, body {
@@ -88,8 +87,8 @@
 
     #start-video {
   position: fixed;
-  bottom: env(safe-area-inset-bottom, 20px); /* MÁS INTELIGENTE */
   left: 50%;
+  bottom: 5%;
   transform: translateX(-50%);
   display: none;
   z-index: 9999;
@@ -101,6 +100,7 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
 
 
 
