--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
     }
 
     #ar-container {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1;
+  position: relative;
+  width: 100%;
+  height: 100dvh; /* Usa 100dvh para evitar errores en móviles con barras */
+  overflow: hidden;
 }
 
     #start-video, #back-button {
@@ -87,12 +86,15 @@
 
     #start-video {
   position: absolute;
-  top: calc(100% - 80px); /* Aparece justo encima del borde inferior */
+  top: auto;
+  bottom: 24px; /* ¡más estable que top! */
   left: 50%;
   transform: translateX(-50%);
   display: none;
   z-index: 9999;
-  padding: 10px 16px;
+  height: 48px; /* <- fija la altura para evitar que se aplaste */
+  line-height: 48px;
+  padding: 0 20px;
   font-size: 16px;
   border: 2px solid white;
   background: rgba(0, 0, 0, 0.6);
@@ -100,6 +102,7 @@
   border-radius: 8px;
   cursor: pointer;
 }
+
 
 
     #back-button {
