--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
     }
 
     #ar-container {
-  position: relative;
-  width: 100%;
-  height: 100dvh; /* Usa 100dvh para evitar errores en móviles con barras */
-  overflow: hidden;
+  position: absolute;
+  top: 0; left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
 }
 
     #start-video, #back-button {
