--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 }
 
 #landing {
-  background: url('./assets/fondo.png') repeat-y center center fixed;
+  background: url('./assets/fondo.png') repeat-y center top;
   background-size: cover;
   position: absolute;
   z-index: 10;
