--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   background: #000; /* Negro por defecto (solo se verá en caso de error) */
 }
 
-#landing {
+/*#landing {
   background: url('./assets/fondo.png') repeat-y center top;
   background-size: cover;
   position: absolute;
@@ -28,7 +28,27 @@
   align-items: center;
   justify-content: flex-start;
   overflow-y: auto;
+}*/
+
+#landing {
+  background: url('./assets/fondo.png') no-repeat center top;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+
+  /* Fondo fijo */
+  background-attachment: local; /* en vez de fixed, que falla en Android */
+
+  /* Movimiento de contenido */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  overflow-y: auto;
 }
+
 
     #logo {
       width: 300px;
